Post code review modifications